code/tui/snapshots/shared/config/provider/narrow_provider_keeps_focused_inputs_visible.snap
---
source: code/tui/src/config/provider_tests.rs
expression: "text(&render(&panel, 36, 14, Instant::now()))"
---
> Provider name
  ╭──────────────────────────────╮
  │ My gateway                   │
  ╰──────────────────────────────╯
  Base URL
  ╭──────────────────────────────╮
  │  https://example.test/gateway│
  ╰──────────────────────────────╯
  API key
  ╭──────────────────────────────╮
  │ API key (optional)           │
  ╰──────────────────────────────╯
